Criação da página sobre, adição da imagem e do video

--- a/aula01/exercicio01/index.html
+++ b/aula01/exercicio01/index.html
@@ -4,23 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introdução ao HTML</title>
+    <title>Introdução ao HTML | Home</title>
 </head>
 <body>
+    <a href="sobre.html">SOBRE</a>
+
     <!-- Cabeçalho -->
-    <h1>Cabeçalho</h1>
+    <h1>Cabeçalhos</h1>
 
     <!-- Aqui tem um parágrafo -->
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi inventore ipsum nostrum dolorum, saepe, impedit aspernatur, in blanditiis nemo odit assumenda itaque. Odio veniam exercitationem accusamus suscipit. Dicta, praesentium perferendis.
+        <strong>Lorem</strong> ipsum dolor sit amet consectetur 
+        adipisicing elit. A esse voluptas culpa totam 
+        perferendis, vero aspernatur dolorem nesciunt 
+        voluptatem id harum officiis corrupti eaque tenetur 
+        fugiat. Animi cumque vero molestiae.
     </p>
 
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi inventore ipsum nostrum dolorum, saepe, impedit aspernatur, in blanditiis nemo odit assumenda itaque. Odio veniam exercitationem accusamus suscipit. Dicta, praesentium perferendis.
+        <em>Lorem</em> ipsum dolor sit, amet consectetur adipisicing elit. Illo atque dolorum ea.
     </p>
 
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi inventore ipsum nostrum dolorum, saepe, impedit aspernatur, in blanditiis nemo odit assumenda itaque. Odio veniam exercitationem accusamus suscipit. Dicta, praesentium perferendis.
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod recusandae vero veritatis dolores earum. Ipsum minima dolorum quis dignissimos nobis repellat dolorem distinctio voluptatibus, nihil magni, quisquam architecto id. Illum recusandae aliquam saepe voluptatibus! Adipisci, ipsa fuga eum neque praesentium iste ducimus laborum dolores cumque, nemo molestias beatae itaque? Quas quod consequuntur omnis eum, nobis harum illo ut. Nesciunt explicabo quae numquam quo, at ipsa nam quidem similique adipisci quam aperiam impedit cum quod, corporis aliquid accusantium aspernatur, laboriosam officiis perferendis voluptates! 
+        Aliquam quaerat culpa, sint perspiciatis ipsum cumque.
     </p>
+
+    <!-- Listas -->
+    <!-- Listas Ordernadas -->
+    <ol>
+        <li>Café</li>
+        <li>Chá</li>
+        <li>Pão</li>
+        <li>Manteiga</li>
+    </ol>
+
+    <!-- Lista nao ordenadas -->
+    <ul>
+        <li>Mesa</li>
+        <li>Cadeira</li>
+        <li>Banco</li>
+        <li>Sofá</li>
+    </ul>
+
+    <a href="https://www.w3schools.com/" target="_blank">W3School</a>
+    
+    <br>
+    <br>
+
+    <img src="./img/uvas.jpeg" alt="Uvas">
+
+    <br>
+    <br>
+    <br>
+
+    <video width="500" height="500" controls>
+        <source src="video/download.mp4" type="video/mp4">
+        Navegador nao suporta video
+    </video>
 </body>
 </html>
