Adicionando links a lista

--- a/aula01/desafio01/index.html
+++ b/aula01/desafio01/index.html
@@ -22,11 +22,23 @@
    <h1>Bob Marley</h1>
    <h3>Reggae</h3>
 
-   <!-- Lista não  ordenada -->
+   <!-- Lista não ordenada com links -->
    <ul type="circle">
-    <li>Catch a Fire</li>
-    <li>Natty Dread</li>
-    <li>Live!</li>
+    <li>
+        <a href="https://www.letras.mus.br/bob-marley/discografia/catch-a-fire-1973/" target="_blank">
+            Catch a Fire
+        </a>
+    </li>
+    <li>
+        <a href="https://www.letras.mus.br/bob-marley/discografia/natty-dread-1975/" target="_blank">
+            Natty Dread
+        </a>
+    </li>
+    <li>
+        <a href="https://www.letras.mus.br/bob-marley/discografia/live-1975/" target="_blank"> 
+            Live! 
+        </a>
+    </li>
    </ul>
 
    <!-- Tag de áudio -->
