--- a/projecto-final/index.html
+++ b/projecto-final/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
+    <header class="nav-bar">
+        <a class="link-logo" href="index.html">
+            Logo
+        </a>
+        <nav class="nav-bar__nav">
+            <ul>
+                <li>
+                    <a href="#">Início</a>
+                </li>
+                <li>
+                    <a href="#">Sobre</a>
+                </li>
+                <li>
+                    <a href="#">Serviços</a>
+                </li>
+                <li>
+                    <a href="#">Geleria</a>
+                </li>
+                <li>
+                    <a href="#">Contacto</a>
+                </li>
+            </ul>
+            
+        </nav>
+    </header>
 </body>
 </html>
