Adicionando as imagens ao projecto final

--- a/projecto-final/index.html
+++ b/projecto-final/index.html
@@ -9,25 +9,23 @@
 </head>
 <body>
     <header class="nav-bar">
-        <a class="link-logo" href="index.html">
-            Logo
+        <a class="logo" href="index.html">
+            <img src="images/logo.png" alt="Logotipo">
+            <span class="logo-label">Colégio M</span>
         </a>
         <nav class="nav-bar__nav">
-            <ul>
+            <ul> 
                 <li>
-                    <a href="#">Início</a>
+                    <a href="sobre.html">Sobre</a>
                 </li>
                 <li>
-                    <a href="#">Sobre</a>
+                    <a href="servicos.html">Serviços</a>
                 </li>
                 <li>
-                    <a href="#">Serviços</a>
+                    <a href="galeria.html">Galeria</a>
                 </li>
                 <li>
-                    <a href="#">Geleria</a>
-                </li>
-                <li>
-                    <a href="#">Contacto</a>
+                    <a href="contacto.html">Contacto</a>
                 </li>
             </ul>
             
