Criando as páginas index.html e style.css

--- a/projecto-final/index.html
+++ b/projecto-final/index.html
@@ -8,28 +8,37 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+    <!-- Navegação -->
     <header class="nav-bar">
         <a class="logo" href="index.html">
-            <img src="images/logo.png" alt="Logotipo">
+            <img width="70" src="images/logo.png" alt="Logotipo">
             <span class="logo-label">Colégio M</span>
         </a>
-        <nav class="nav-bar__nav">
-            <ul> 
-                <li>
+        <nav class="nav">
+            <ul class="nav-ul"> 
+                <li class="nav-itens">
                     <a href="sobre.html">Sobre</a>
                 </li>
-                <li>
+                <li class="nav-itens">
                     <a href="servicos.html">Serviços</a>
                 </li>
-                <li>
+                <li class="nav-itens">
                     <a href="galeria.html">Galeria</a>
                 </li>
-                <li>
+                <li class="nav-itens">
                     <a href="contacto.html">Contacto</a>
                 </li>
             </ul>
-            
         </nav>
     </header>
+
+    <!-- Banner -->
+    <section class="banner">
+        <div class="overlay"></div>
+        <h1>O lugar para aprender e crescer</h1>
+        <h4>Conhecimento acompanhado à prática</h4>
+
+        <a href="contacto.html" class="banner-btn">Contacte-nos</a>
+    </section>
 </body>
 </html>
