Criei a section visão e preços do colégio, ainda dei estilo a elas!

--- a/projecto-final/index.html
+++ b/projecto-final/index.html
@@ -43,8 +43,78 @@
         <a href="contacto.html" class="banner-btn">Contacte-nos</a>
     </section>
 
-    <section>
+    <!-- Visão -->
+    <section class="visao">
+        <h1 class="visao-titulo">O que nos torna diferentes</h1>
+        <p class="visao-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+   
+        <div class="visao-container">
+            <div class="visao-item">
+                <i class="fa-solid fa-book-open-reader"></i>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum!</p>
+            </div> 
 
+            <div class="visao-item">
+                <i class="fa-solid fa-graduation-cap"></i>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque!</p>
+            </div>
+            
+            <div class="visao-item">
+                <i class="fa-solid fa-book-open-reader"></i>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus.</p>
+            </div>
+        </div> 
     </section>
+
+    <!-- Preços -->
+
+    <section class="precos">
+        <h1>Os nossos preços</h1> 
+            <div class="precos-container">
+                <div class="precos-card">
+                    <div class="label-card"> 
+                        <h4>Ensino Primário</h4>
+                        <p><i class="fa-solid fa-money-bills"></i>10.000Kz</p>
+                    </div>
+                    <a href="#" class="btn-card">Saber mais</a>
+                </div>
+
+                <div class="precos-card">
+                    <div class="label-card"> 
+                        <h4>IIº Ciclo</h4>
+                        <p><i class="fa-solid fa-money-bills"></i>15.000Kz</p>
+                    </div>
+                    <a href="#" class="btn-card">Saber mais</a>
+                </div>
+
+                <div class="precos-card">
+                    <div class="label-card"> 
+                        <h4>IIº Ciclo</h4>
+                        <p><i class="fa-solid fa-money-bills"></i>20.000Kz</p>
+                    </div>
+                    <a href="#" class="btn-card">Saber mais</a>
+                </div> 
+        </div> 
+    </section>
+
+    <!-- Rodapé -->
+    <footer class="rodape">
+        <h4>Colégio M</h4>
+        <div class="social-midia">
+            <a href="#">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+        </div>
+        <p>&copy; 2022 - <a class="dev" href="#">Nicolau Alfredo</a></p>
+    </footer>
 </body>
 </html>
